# dda

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
conf/: deploy.yaml  train.yaml
scripts/: build_xbd_dataset.py  publish_model.py
src/dda/: __init__.py  calibrate.py  cli.py  config.py  data.py  evaluation.py  export.py  infer.py  losses.py  model.py  pool.py  train.py
tests/: test_config.py  test_data.py  test_infer.py  test_losses.py  test_model.py  test_pool.py
